--- a/css/header.scss
+++ b/css/header.scss
@@ -18,5 +18,28 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
     .icons{
         font-size: 2.5rem;
         cursor: pointer;
+        color: $white;
+
+        &:hover{
+            color: $yellow;
+        }
+    }
+
+    #menu-btn{
+        display: none;
+    }
+
+    .navbar{
+        a{
+            color: $white;
+            font-size: 2rem;
+            margin: 0 2rem;
+
+            &:hover{
+                text-decoration: underline;
+                text-underline-offset: 1rem;
+                color: $yellow;
+            }
+        }
     }
 }
