--- a/css/header.css
+++ b/css/header.css
@@ -43,4 +43,21 @@
   text-underline-offset: 1rem;
   color: #eacf4f;
 }
+
+.header .navbar .space {
+  display: inline-block;
+  width: 16rem;
+}
+
+.header .logo {
+  position: absolute;
+  top: 3rem;
+  left: 48.5%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.header .logo img {
+  width: 15rem;
+}
 /*# sourceMappingURL=header.css.map */
