--- a/css/header.scss
+++ b/css/header.scss
@@ -41,5 +41,20 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
                 color: $yellow;
             }
         }
+
+        .space{
+            display: inline-block;
+            width: 16rem;
+        }
+    }
+
+    .logo{
+        position: absolute;
+        top: 3rem; left: 48.5%;
+        transform: translateX(-50%);
+
+        img{
+            width: 15rem;
+        }
     }
 }
