--- a/css/header.css
+++ b/css/header.css
@@ -76,6 +76,13 @@
   top: 99%;
   left: 0;
   right: 0;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+          clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+.header .search-form.active {
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .header .search-form input {
@@ -84,5 +91,11 @@
   text-transform: none;
   font-size: 1.6rem;
   color: #fff;
+}
+
+.header .search-form label {
+  font-size: 2.5rem;
+  color: #fff;
+  cursor: pointer;
 }
 /*# sourceMappingURL=header.css.map */
