--- a/css/mobile.css
+++ b/css/mobile.css
@@ -37,7 +37,7 @@
   }
   .header .navbar a {
     display: block;
-    margin: 2rem;
+    margin: 3rem 2rem;
   }
   .header .navbar .space {
     display: none;
