--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -41,7 +41,7 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
 
             a{
                 display: block;
-                margin: 2rem;
+                margin:3rem 2rem;
             }
 
             .space{
