--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,4 +38,8 @@ body {
   background-position: center;
   overflow-x: hidden;
 }
+
+section {
+  padding: 3rem 9%;
+}
 /*# sourceMappingURL=estilo.css.map */
