--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -8,6 +8,10 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
     .header{
         padding: 3rem;
     }
+
+    section{
+        padding: 3rem 2rem;
+    }
 }
 
 @media (max-width:991px){
