--- a/css/mobile.css
+++ b/css/mobile.css
@@ -47,6 +47,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .home .content h3 {
+    font-size: 2.5rem;
+  }
+}
+
 @media (max-width: 450px) {
   html {
     font-size: 50%;
