--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -55,6 +55,17 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
     }
 }
 
+@media (max-width:768px){
+    .home{
+        .content{
+            h3{
+                font-size: 2.5rem;
+            }
+        }
+    }
+}
+
+
 @media (max-width:450px){
     html{
         font-size: 50%;
