--- a/css/estilo.css
+++ b/css/estilo.css
@@ -43,6 +43,17 @@ section {
   padding: 3rem 9%;
 }
 
+.heading {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.heading h3 {
+  font-size: 3rem;
+  color: #fff;
+  margin-top: 1rem;
+}
+
 .btn {
   display: inline-block;
   margin-top: 1rem;
