--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -63,6 +63,16 @@ section{
     padding: 3rem 9%;
 }
 
+.heading{
+    text-align: center;
+    margin-bottom: 3rem;
+
+    h3{
+        @include title-text(3rem);
+        margin-top: 1rem;
+    }
+}
+
 .btn{
     display: inline-block;
     margin-top: 1rem;
