--- a/css/about.css
+++ b/css/about.css
@@ -5,8 +5,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 3rem;
 }
 
@@ -44,14 +44,16 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 1rem;
+  gap: 1.5rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 .about .content .icons h3 {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 16rem;
           flex: 1 1 16rem;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   color: #fff;
 }
 
