--- a/css/about.scss
+++ b/css/about.scss
@@ -24,11 +24,11 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
 .about{
     display: flex;
     align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 3rem;
 
     .image{
-        flex: 1 1 40rem;
+        flex:1 1 40rem;
 
         img{
             width: 100%;
@@ -36,7 +36,7 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
     }
 
     .content{
-        flex: 1 1 40rem;
+        flex:1 1 40rem;
 
         .title{
             @include title-text(2.5rem);
@@ -50,11 +50,13 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
         .icons{
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
+            margin-top: 1rem;
 
             h3{
-                flex: 1 1 16rem;
-                @include title-text(1.7rem);
+                flex:1 1 16rem;
+                @include title-text(1.5rem);
 
                 i{
                     padding-right: 0.5rem;
