--- a/css/reviews.css
+++ b/css/reviews.css
@@ -30,6 +30,10 @@
   padding: 1rem 0;
 }
 
+.reviews .box-container .box .stars {
+  padding-top: 0.5rem;
+}
+
 .reviews .box-container .box .stars i {
   font-size: 1.7rem;
   color: #eacf4f;
