--- a/css/reviews.scss
+++ b/css/reviews.scss
@@ -47,6 +47,7 @@ $border: 0.2rem solid rgba(255,255,255,0.3);
             }
 
             .stars{
+                padding-top: 0.5rem;
 
                 i{
                     font-size: 1.7rem;
